Part 5 done, still need to fix the Resetting password feature

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<title></title>
+<title>
+    UNsocial Network
+</title>
 <link rel="stylesheet" href="/bundle.css" />
 <main></main>
 <script src="/bundle.js"></script>
